--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.RegisterActivity"></activity>
+        <activity android:name=".activity.NewsActivity"></activity>
 
 
     </application>
