View group score for students. Needs to have lower res pictures to represent the groups in this activity. Current pictures are too big

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:required="true" />
 
     <application>
-
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.android.fileprovider"
@@ -24,30 +23,25 @@
         <activity android:name=".activity.RegisterActivity" />
         <activity
             android:name=".activity.NewsActivity"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".activity.TrReportActivity"
             android:allowBackup="true"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-
-
-        </activity>
-
-
-
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".activity.GLAttendanceActivity"
             android:theme="@style/AppTheme">
 
+        </activity>
+        <activity
+            android:name=".ViewGroupScoreActivity"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
     </application>
 
 </manifest>
